--- a/src/app/prinput/prinput-preview/prinput-preview.component.html
+++ b/src/app/prinput/prinput-preview/prinput-preview.component.html
@@ -21,10 +21,10 @@
         <td>{{ prinputdata.glcost }}</td>
         <td>{{ prinputdata.prdate }}</td>
         <td>{{ prinputdata.itemdesc }}</td>
-        <td>{{ prinputdata.price }}</td>
+        <td>{{ prinputdata.unitprice }}</td>
         <td>{{ prinputdata.qty }}</td>
         <td>{{ prinputdata.unit }}</td>
-        <td>500000</td>
+        <td>{{ prinputdata.amountprice }}</td>
         <td>{{ prinputdata.suppliername }}</td>
         <td>{{ prinputdata.duedate }}</td>
         <td>{{ prinputdata.remark }}
