--- a/src/app/prinput/prinput.component.html
+++ b/src/app/prinput/prinput.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <app-prinputform (onInputPrData)="itemPrAdded($event)"></app-prinputform>
+  <app-prinputform (onInputPrData)="itemPrAdded($event)" (ServiceClick)="serviceTest($event)"></app-prinputform>
   <hr>
   <!-- <app-prinput-preview
   *ngFor="let prinputdata of prinputdatas"
