--- a/src/app/prinput/prinput-preview/prinput-preview.component.html
+++ b/src/app/prinput/prinput-preview/prinput-preview.component.html
@@ -3,6 +3,7 @@
     <thead>
       <tr>
         <td>PR Number</td>
+        <td>Cost Center</td>
         <td>GL Number</td>
         <td>PR Date</td>
         <td>Item Desctription</td>
@@ -18,6 +19,7 @@
     <tbody>
       <tr *ngFor="let prinputdata of prinputdatas">
         <td>{{ prinputdata.prno }}</td>
+        <td>{{ prinputdata.costcenter }}</td>
         <td>{{ prinputdata.glcost }}</td>
         <td>{{ prinputdata.prdate }}</td>
         <td>{{ prinputdata.itemdesc }}</td>
