--- a/src/app/prinput/prinputform/prinputform.component.html
+++ b/src/app/prinput/prinputform/prinputform.component.html
@@ -1,120 +1,178 @@
-<form>
-  .
-  <div class="container">
-
+<div class="container">
+  <form>
     <div class="row">
-      <div class="col-xs-8 form-group">
-        <div class="row">
-          <label for="prtype">Puchase Requisition Type : </label>
-          <input type="text">
+      <!-- left column -->
+      <div class="col-xs-6">
+        <!-- PR Type -->
+        <div class="input-group">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-prtype">PR Type :
+          </span>
+          <select class="form-control input-sm" aria-describedby="basic-prtype" id="prtype" style="width: 200px;">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
         </div>
-        <div class="row">
-          <label for="plat">Plant / Plant Description : </label>
-          <input type="text">
+        <!-- Plant -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-plant">PR Plant :
+          </span>
+          <select class="form-control input-sm" aria-describedby="basic-plant" id="plant" style="width: 200px;">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
         </div>
-        <div class="row">
-          <label for="businessarea">Business Area : </label>
-          <input type="text">
+        <!-- Business Area -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-buzarea">Business Area
+            : </span>
+          <select class="form-control input-sm" aria-describedby="basic-buzarea" id="buzarea" style="width: 200px;">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
         </div>
-        <div class="row">
-          <label for="profitCenter">Profit Center : </label>
-          <input type="text">
+        <!-- Profit Center -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-profitcenter">Profit
+            Center : </span>
+          <select class="form-control input-sm" aria-describedby="basic-profitcenter" id="profitcenter" style="width: 200px;">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
         </div>
-        <div class="row">
-          <label for="requestby">Request By : </label>
-          <input type="text" id="">
+        <!-- Request by -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-requestby">Request By
+            : </span>
+          <select class="form-control input-sm" aria-describedby="basic-requestby" id="requestby" style="width: 200px;">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
         </div>
       </div>
-      <div class="col-xs-4 form-group">
-        <div class="row">
-          <label for="prnumber">PR Number : </label>
-          <input type="text" id="">
+      <!-- right column -->
+      <div class="col-xs-4">
+        <!-- PR Number -->
+        <div class="input-group">
+          <span class="input-group-addon" style="width: 200px; text-align: right;" id="basic-prnumber">PR Number :
+          </span>
+          <input id="prnumber" type="text" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prnumber">
         </div>
-        <div class="row">
-          <label for="prdate">PR Date : </label>
-          <input type="text" id="">
+        <div class="input-group" style="margin-top: 5px;">
+          <!-- PR Date -->
+          <span class="input-group-addon" style="width: 200px; text-align: right;" id="basic-prdate">PR Date : </span>
+          <input id="prdate" type="date" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prdate">
         </div>
-        <div class="row">
-          <label for="investNumver">Investment Number : </label>
-          <input type="text" id="">
+        <div class="input-group" style="margin-top: 5px;">
+          <!-- Dlv Date -->
+          <span class="input-group-addon" style="width: 200px; text-align: right;" id="basic-dlvdate">Dlv Date : </span>
+          <input class="form-control input-sm" style="width: 200px;" id="dlvdate" type="date" aria-describedby="basic-dlvdate">
+        </div>
+        <div class="input-group" style="margin-top: 5px;">
+          <!-- Investment Number -->
+          <span class="input-group-addon" style="width: 2000px; text-align: right;" id="basic-prinvnumber">Investment
+            Number : </span>
+          <input id="prinvnumber" type="text" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prinvnumber">
+        </div>
+        <div class="input-group" style="margin-top: 5px;">
+          <!-- Supplier Name -->
+          <span class="input-group-addon" style="width: 2000px; text-align: right;" id="basic-suppliername">Supplier :
+          </span>
+          <select class="form-control input-sm" aria-describedby="basic-suppliername" id="suppliername" style="width: 200px;">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 form-group">
-        <table>
-          <tr>
-            <td><label for="itemdesc">Item Description : </label></td>
-            <td><label for="dlvdate">Dlv. Date : </label></td>
-            <td><label for="quantity">Quantity : </label></td>
-            <td><label for="unit">Unit</label></td>
-            <td><label for="unitprice">Unit Price</label></td>
-            <td><label for="supname">Supplier Name</label></td>
-          <tr>
-            <td>
-              
-              <input type="text" id="itemdesc" tabindex="5" #itemdescription>
-            </td>
-            <td>
-              
-              <input type="date" id="dlvdate" tabindex="5" #itemdescription>
-            </td>
-            <td>
-              
-              <input type="number" id="quantity" tabindex="5" #itemdescription>
-            </td>
-            <td>
-              
-              <div class="dropdown">
-                <button #unitbutton class="from-control btn btn-default dropdown-toggle" type="button" id="unit" data-toggle="dropdown" aria-haspopup="true"
-                  aria-expanded="true" tabindex="8">
-                  {{ unit }}
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="unit">
-                  <li>
-                    <a href="#" *ngFor="let _unit of units" (click)="unit = _unit.unit">{{ _unit.unit }}</a>
-                  </li>
-                </ul>
-              </div>
-            </td>
-            <td>
-              
-              <input disabled="true" type="number" class="form-control" id="unitprice" tabindex="9" #totalpricenumber>
-
-            </td>
-            <td>
-
-            </td>
-            <td>
-              
-              <div class="dropdown">
-                <button #supplierbutton class="btn btn-default dropdown-toggle" type="button" id="supname" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="true" tabindex="10">{{ sup }}
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="supname">
-                  <li>
-                    <a href="#" *ngFor="let supplier of suppliers" (click)="sup = supplier.sp">{{ supplier.sp }}</a>
-                  </li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-        </table>
-
-
+    <!-- Detail Row -->
+    <div class="row" style="margin-top: 10px;">
+      <div class="col-xs-10">
+        <div class="row">
+          <!-- Description -->
+          <div class="col-xs-3" style="margin: 1px;">
+            <span class="input-group-addon" style="width: 50px; text-align: right;" id="basic-desc">Desc:</span>
+            <input id="desc" class="form-control input-sm" type="text" aria-describedby="basic-desc">
+          </div>
+          <!-- Quantity -->
+          <div class="col-xs-2" style="margin: 1px;">
+            <input class="form-control input-sm" type="number" maxlength="3">
+          </div>
+          <!-- Unit -->
+          <div class="col-xs-2" style="margin: 1px;">
+              <span class="input-group-addon" style="width: 2000px; text-align: right;" id="basic-unit">Unit :
+                </span>
+                <select class="form-control input-sm" aria-describedby="basic-unit" id="unit" style="width: 200px;">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+          </div>
+          <!-- Unit Price -->
+          <div class="col-xs-2" style="margin: 1px;">
+            <input class="form-control input-sm" type="number" maxlength="3">
+          </div>
+          <!-- Currency -->
+          <div class="col-xs-2" style="margin: 1px;">
+            <div class="btn-group">
+              <button type="button" class="btn btn-default input-sm">THB</button>
+              <button type="button" class="btn btn-default dropdown-toggle input-sm" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row" style="margin-top: 10px;">
+          <div class="col-xs-12" style=" text-align: right;">
+            <button class="btn btn-primary" style="margin-top: 10px; width: 100px;" type="submit" (click)="itemAdded()">Save</button>
+            <button class="btn btn-default" style="margin-top: 10px; width: 100px;">Cancel</button>
+          </div>
+        </div>
       </div>
-
     </div>
-
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12">
-      <button class="btn btn-primary" type="submit" (click)="itemAdded()">Save</button>
-      <button class="btn btn-default">Cancel</button>
-      <button class="btn btn-danger" type="button">Test Service</button>
-    </div>
-  </div>
-</form>
+  </form>
+</div>
+<!-- Split button -->
+<div class="btn-group">
+  <button type="button" class="btn btn-default">THB</button>
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+    aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
