--- a/src/app/prinput/prinputform/prinputform.component.html
+++ b/src/app/prinput/prinputform/prinputform.component.html
@@ -2,36 +2,29 @@
   <form>
     <div class="row">
       <!-- left column -->
-      <div class="col-xs-6">
+      <div class="col-sm-4">
         <!-- PR Type -->
-        <div class="input-group">
+        <div class="input-group" style="margin-top: 5px;">
           <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-prtype">PR Type :
           </span>
-          <select class="form-control input-sm" aria-describedby="basic-prtype" id="prtype" style="width: 200px;">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+          <select class="form-control input-sm" aria-describedby="basic-prtype" id="prtype" style="width: 200px;" tabindex="1">
+            <option></option>
+            <option>Investment</option>
+            <option>No Investment</option>
           </select>
         </div>
         <!-- Plant -->
         <div class="input-group" style="margin-top: 5px;">
           <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-plant">PR Plant :
           </span>
-          <select class="form-control input-sm" aria-describedby="basic-plant" id="plant" style="width: 200px;">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+          <select class="form-control input-sm" aria-describedby="basic-plant" id="plant" style="width: 200px;" tabindex="2">
+            <option *ngFor="let plant of plants">{{ plant.plantName }}</option>
           </select>
         </div>
         <!-- Business Area -->
         <div class="input-group" style="margin-top: 5px;">
-          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-buzarea">Business Area
-            : </span>
-          <select class="form-control input-sm" aria-describedby="basic-buzarea" id="buzarea" style="width: 200px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-buzarea">Business Area : </span>
+          <select class="form-control input-sm" aria-describedby="basic-buzarea" id="buzarea" style="width: 200px;" tabindex="3">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -41,9 +34,9 @@
         </div>
         <!-- Profit Center -->
         <div class="input-group" style="margin-top: 5px;">
-          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-profitcenter">Profit
-            Center : </span>
-          <select class="form-control input-sm" aria-describedby="basic-profitcenter" id="profitcenter" style="width: 200px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-profitcenter">Profit Center
+            : </span>
+          <select class="form-control input-sm" aria-describedby="basic-profitcenter" id="profitcenter" style="width: 200px;" tabindex="4">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -53,9 +46,8 @@
         </div>
         <!-- Request by -->
         <div class="input-group" style="margin-top: 5px;">
-          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-requestby">Request By
-            : </span>
-          <select class="form-control input-sm" aria-describedby="basic-requestby" id="requestby" style="width: 200px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-requestby">Request By : </span>
+          <select class="form-control input-sm" aria-describedby="basic-requestby" id="requestby" style="width: 200px;" tabindex="5">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -65,114 +57,80 @@
         </div>
       </div>
       <!-- right column -->
-      <div class="col-xs-4">
+      <div class="col-sm-4">
         <!-- PR Number -->
-        <div class="input-group">
-          <span class="input-group-addon" style="width: 200px; text-align: right;" id="basic-prnumber">PR Number :
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-prnumber">PR Number :
           </span>
-          <input id="prnumber" type="text" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prnumber">
+          <input id="prnumber" type="text" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prnumber" tabindex="6">
         </div>
         <div class="input-group" style="margin-top: 5px;">
           <!-- PR Date -->
-          <span class="input-group-addon" style="width: 200px; text-align: right;" id="basic-prdate">PR Date : </span>
-          <input id="prdate" type="date" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prdate">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-prdate">PR Date : </span>
+          <input id="prdate" type="date" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prdate" tabindex="7">
         </div>
         <div class="input-group" style="margin-top: 5px;">
           <!-- Dlv Date -->
-          <span class="input-group-addon" style="width: 200px; text-align: right;" id="basic-dlvdate">Dlv Date : </span>
-          <input class="form-control input-sm" style="width: 200px;" id="dlvdate" type="date" aria-describedby="basic-dlvdate">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-dlvdate">Dlv Date : </span>
+          <input class="form-control input-sm" style="width: 200px;" id="dlvdate" type="date" aria-describedby="basic-dlvdate" tabindex="8">
         </div>
         <div class="input-group" style="margin-top: 5px;">
           <!-- Investment Number -->
-          <span class="input-group-addon" style="width: 2000px; text-align: right;" id="basic-prinvnumber">Investment
-            Number : </span>
-          <input id="prinvnumber" type="text" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prinvnumber">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-prinvnumber">Investment No :
+          </span>
+          <input id="prinvnumber" type="text" style="width: 200px;" class="form-control input-sm" aria-describedby="basic-prinvnumber" tabindex="9">
         </div>
         <div class="input-group" style="margin-top: 5px;">
           <!-- Supplier Name -->
-          <span class="input-group-addon" style="width: 2000px; text-align: right;" id="basic-suppliername">Supplier :
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-suppliername">Supplier :
           </span>
-          <select class="form-control input-sm" aria-describedby="basic-suppliername" id="suppliername" style="width: 200px;">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+          <select class="form-control input-sm" aria-describedby="basic-suppliername" id="suppliername" style="width: 200px;" tabindex="10">
+            <option *ngFor="let supplier of suppliers">{{ supplier.sp }}</option>
           </select>
         </div>
       </div>
-    </div>
-    <!-- Detail Row -->
-    <div class="row" style="margin-top: 10px;">
-      <div class="col-xs-10">
-        <div class="row">
-          <!-- Description -->
-          <div class="col-xs-3" style="margin: 1px;">
-            <span class="input-group-addon" style="width: 50px; text-align: right;" id="basic-desc">Desc:</span>
-            <input id="desc" class="form-control input-sm" type="text" aria-describedby="basic-desc">
-          </div>
-          <!-- Quantity -->
-          <div class="col-xs-2" style="margin: 1px;">
-            <input class="form-control input-sm" type="number" maxlength="3">
-          </div>
-          <!-- Unit -->
-          <div class="col-xs-2" style="margin: 1px;">
-              <span class="input-group-addon" style="width: 2000px; text-align: right;" id="basic-unit">Unit :
-                </span>
-                <select class="form-control input-sm" aria-describedby="basic-unit" id="unit" style="width: 200px;">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-          </div>
-          <!-- Unit Price -->
-          <div class="col-xs-2" style="margin: 1px;">
-            <input class="form-control input-sm" type="number" maxlength="3">
-          </div>
-          <!-- Currency -->
-          <div class="col-xs-2" style="margin: 1px;">
-            <div class="btn-group">
-              <button type="button" class="btn btn-default input-sm">THB</button>
-              <button type="button" class="btn btn-default dropdown-toggle input-sm" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <span class="caret"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </div>
-          </div>
+
+      <div class="col-sm-4">
+        <!-- Description -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-desc">Desc:</span>
+          <input id="desc" class="form-control input-sm" type="text" style="width: 200px;" aria-describedby="basic-desc" tabindex="11">
         </div>
-        <div class="row" style="margin-top: 10px;">
-          <div class="col-xs-12" style=" text-align: right;">
-            <button class="btn btn-primary" style="margin-top: 10px; width: 100px;" type="submit" (click)="itemAdded()">Save</button>
-            <button class="btn btn-default" style="margin-top: 10px; width: 100px;">Cancel</button>
-          </div>
+        <!-- Quantity -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-qty">Qty:</span>
+          <input id="qty" class="form-control input-sm" type="number" style="width: 200px;" maxlength="3" aria-describedby="basic-qty" tabindex="12">
+        </div>
+        <!-- Unit -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-unit">Unit :
+          </span>
+          <select class="form-control input-sm" aria-describedby="basic-unit" id="unit" style="width: 200px;" tabindex="13">
+            <option *ngFor="let unit of units">{{ unit.unit }}</option>
+          </select>
+        </div>
+        <!-- Unit Price -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-unitprice">Unit Price :</span>
+          <input id="unitprice" class="form-control input-sm" type="number" style="width: 200px;" aria-describedby="basic-unitprice" tabindex="14">
+        </div>
+        <!-- Currency -->
+        <div class="input-group" style="margin-top: 5px;">
+          <span class="input-group-addon" style="width: 150px; text-align: right;" id="basic-curr">Currency :
+          </span>
+          <select class="form-control input-sm"
+          aria-describedby="basic-curr"
+          id="curr" style="width: 200px;"
+          tabindex="15">
+            <option *ngFor="let currency of currencies" [value]="currency.no">{{ currency.curr }}</option>
+          </select>
+        </div>
+        <div>
+          <button class="btn btn-primary" style="margin-top: 5px; width: 175px;" type="submit" (click)="itemAdded()" tabindex="16">Save</button>
+          <button class="btn btn-default" style="margin-top: 5px; width: 175px;">Cancel</button>
+      
         </div>
       </div>
     </div>
   </form>
-</div>
-<!-- Split button -->
-<div class="btn-group">
-  <button type="button" class="btn btn-default">THB</button>
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-    aria-expanded="false">
-    <span class="caret"></span>
-    <span class="sr-only">Toggle Dropdown</span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
 </div>
