--- a/src/app/prview/prview.component.html
+++ b/src/app/prview/prview.component.html
@@ -1,3 +1,74 @@
-<p>
-  prview works!
-</p>
+<div class="container-fluid">
+    <div class="row">
+      <form class="form-inline">
+        <div class="form-group">
+          <input type="text" class="form-control input-sm" placeholder="TYPE OF ">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control input-sm" placeholder="KEY WORD">
+        </div>
+        <button type="submit" class="btn btn-default input-sm" style="font-size: 12px;" >Search >></button>
+      </form>
+    </div>
+    <div class="table-responsive" style="margin-top: 10px;" >
+      <table class="table table-bordered table-hover" style="font-size: 12px;">
+        <thead>
+          <tr>
+            <td>
+              PR TYPE
+            </td>
+            <td>
+              PLANT
+            </td>
+            <td>
+              PROFIT<br>AREA
+            </td>
+            <td>
+              BUSINESS<br>AREA
+            </td>
+            <td>
+              REQUEST<br>BY
+            </td>
+            <td>
+              PR NUMBER
+            </td>
+            <td>
+              PR DATE
+            </td>
+            <td>
+              DIV DATE
+            </td>
+            <td>
+              INVESTMENT<br>NUMBER
+            </td>
+            <td>
+              SUPPLIER
+            </td>
+            <td>
+              DESCRIPTION
+            </td>
+            <td>
+              QUANTITY
+            </td>
+            <td>
+              UNIT
+            </td>
+            <td>
+              UNIT PRICE
+            </td>
+            <td>
+              TOTAL PRICE
+            </td>
+            <td>
+              CURRENCY
+            </td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+</div>
