--- a/src/app/prinput/prinputform/prinputform.component.html
+++ b/src/app/prinput/prinputform/prinputform.component.html
@@ -128,7 +128,7 @@
       </div>
       <div class="col-sm-4">
           <button class="btn btn-primary" style="margin-top: 5px; width: 173px;" type="submit" (click)="itemAdded()" tabindex="17">Save</button>
-          <button class="btn btn-default" style="margin-top: 5px; width: 173px;">Cancel</button>
+          <button class="btn btn-default" style="margin-top: 5px; width: 173px;" (click)="onSavetoFirebase()">Cancel</button>
       </div>
     </div>
   </form>
